# rust-learn

./: .gitignore  Cargo.toml  output.json  test.rest
fixtures/: blake3.key  ed25519.key  ed25519.pub
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
src/utils/: mod.rs
