[package]
name = "learn"
version = "0.1.0"
authors = ["Kaixuan Wang <w990964550@163.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
blake3 = "1.6.0"
clap = { version = "4.5.30", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = "2.1.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
toml = "0.8.20"
zxcvbn = "3.1.0"
