[package]
name = "learn"
version = "0.1.0"
authors = ["Kaixuan Wang <w990964550@163.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.6.0"
clap = { version = "4.5.30", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
